# clumsy3d

./: .gitignore  CMakeLists.txt  README.md
3rd/GTest/: CONTROL
3rd/GTest/debug/lib/: gmockd.lib  gtestd.lib
3rd/GTest/debug/lib/manual-link/: gmock_maind.lib  gtest_maind.lib
3rd/GTest/debug/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
3rd/GTest/lib/: gmock.lib  gtest.lib
3rd/GTest/lib/manual-link/: gmock_main.lib  gtest_main.lib
3rd/GTest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
3rd/GTest/share/GTest/: GTestTargets.cmake  vcpkg_abi_info.txt
3rd/glad/: CONTROL
3rd/glad/debug/lib/: glad.lib
3rd/glad/lib/: glad.lib
3rd/glad/share/glad/: gladTargets.cmake  vcpkg_abi_info.txt
3rd/glfw3/: CONTROL
3rd/glfw3/lib/: glfw3dll.lib
3rd/glfw3/share/glfw3/: glfw3Targets.cmake  vcpkg_abi_info.txt
3rd/imgui/: CONTROL
3rd/imgui/share/imgui/: imgui-config.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
clumsy3d/: CMakeLists.txt  clumsy3d.cpp  clumsy3d.ixx  cmd_executor.cpp  command_manager.cpp  commands.cpp  common_structs.cpp  component.cpp  config_define_helper.h  entity_manager.cpp  entity_relation.cpp  entity_relation_functions.cpp  input_table.cpp  invoke_update_function.cpp  ui_binder.cpp  update_functions.cpp  update_functions_meta.cpp  update_table.cpp
cmake/: utils.cmake
components/cl_core/: CMakeLists.txt  core.ixx  entity_system.ixx  get_type_name.ixx  member_extractor.ixx  static_var_map.ixx  type_helper.ixx  type_list.ixx
components/cl_event_driver/: CMakeLists.txt  event_driver.cpp  event_driver.ixx
components/cl_matrix/: CMakeLists.txt  matrix.ixx
components/cl_render/: CMakeLists.txt  renderer.cpp  renderer.ixx  shader.cpp  vertex_array.cpp
components/cl_ui/: CMakeLists.txt  ui.cpp  ui.ixx  ui_components.cpp  ui_factory.ixx  ui_object.cpp  ui_type_table.ixx  ui_wrappers.cpp
entry/: CMakeLists.txt  main.cpp
unit_test/cl_matrix_test/: CMakeLists.txt  main.cpp  matrix_test.cpp
